# NeatRL

./: .gitignore  DEPLOYMENT_GUIDE.md  Makefile  QUICKSTART.md  README.md  USER_GUIDE.md  WEB_INTERFACE_GUIDE.md  ale_battle_system.py  ale_environment_test_results.json  ale_play_script.py  arena_battle_system.py  conftest.py  docker-compose.yml  pyproject.toml  pyrightconfig.json  requirements.arena.txt  start_arena.sh  supabase_rls_policies_fixed.sql  test_complete_setup.py  test_neatrl.py  test_pettingzoo_setup.py  web_display_server.py  web_server.py
.github/workflows/: ci.yml
A2C/: a2cLunarLander.py
DDPG/: bipedal.py
DQN/: README.md  train.py
DQN-FrozenLake/: README.md
DQN-Lunar/: README.md
DQN-Taxi/: README.md
DQN-atari/: README.md  train.py
DQN-flappy/: train.py
Duel-DQN/: README.md  pyproject.toml  train.py
FlappyBird-PPO/: README.md
MARL/: README.md
MARL/IPPO/: README.md
MARL/MAPPO/: README.md
MARL/Self Play/: README.md
PPO/: README.md
PPO/Atari/: README.md  atari.py
PPO/MuJoCo/: README.md
RND/: README.md  cliffwalking.py
SAC/: SAC_discrete.py  train.py
TD3/: README.md  train.pY
alertmanager/: config.yml
app/: main.py
app/api/: metrics_endpoint.py  rlarena.py  rlhub.py  submissions.py
app/models/: submission.py
app/services/: battle_service.py  human_vs_ai_service.py
app/worker/: Dockerfile
docker/: Dockerfile.arena
docs/A2C/: README.md  run_a2c_cnn_car_racing.py  run_a2c_frozen_lake.py  run_a2c_lunarlander.py  run_a2c_pendulum.py  run_a2c_reacher.py
docs/DDPG/: README.md  run_ddpg_bipedal_walker.py  run_ddpg_cnn_car_racing.py  run_ddpg_half_cheetah.py  run_ddpg_pendulum.py
docs/DQN/: README.md  run_dqn_acrobat.py  run_dqn_acrobot.py  run_dqn_carracing.py  run_dqn_cartpole.py  run_dqn_frozenlake.py  run_dqn_mountaincar.py  run_dqn_taxi.py
docs/Dueling-DQN/: README.md  run_duel_dqn_cliff.py  run_duel_dqn_frozenlake.py  run_duel_dqn_lunar.py
docs/PPO/: README.md  run_ppo_bipedal_walker.py  run_ppo_breakout.py  run_ppo_taxi.py
docs/REINFORCE/: README.md  run_reinforce_car_racing.py  run_reinforce_cartpole.py  run_reinforce_frozenlake.py  run_reinforce_pendulum.py
docs/RND/: README.md  run_rnd_breakout.py  run_rnd_cliffwalking.py  run_rnd_fronzenlake.py  run_rnd_mountain_car.py
docs/SAC/: README.md  run_sac_breakout.py  run_sac_cnn_car_racing.py  run_sac_halfcheetah.py  run_sac_pendulum.py
docs/TD3/: README.md  run_td3_bipedal_walker.py
docs/cli/: a2c.py  ddpg.py  dqn.py  dueling_dqn.py  ppo.py  reinforce.py  rnd.py  sac.py  td3.py
example_agents/: dqn_arena_model.py
experiments/DQN/: README.md  pyproject.toml
experiments/DQN-FrozenLake/: README.md  pyproject.toml
experiments/DQN-Lunar/: pyproject.toml
experiments/DQN-Taxi/: README.md  pyproject.toml
experiments/DQN-atari/: README.md  pyproject.toml
experiments/Duel-DQN/: README.md
experiments/FlappyBird-PPO/: README.md
experiments/MARL/: README.md
experiments/PPO/: README.md
experiments/RND/: README.md  cliffwalking.py  lunar.py  mountain-car.py
experiments/TD3/: cheetah.py
frontend/: .dockerignore  .gitignore  Dockerfile  Gemfile  README.md  _config.yml  _config_dev.yml  game_interface.html  gradio_app_fixed.py  index.html  package.json
frontend/_data/: navigation.yml
frontend/_includes/: author-profile.html  head.html  masthead.html
frontend/_layouts/: default.html  rl-implementation.html  single.html
frontend/_models/: 20-llama4.md
frontend/_pages/: leaderboard.html  publications.md  rl-index.md  rl.html  rlhub.md
frontend/_publications/: 2009-10-01-paper-title-number-1.md
frontend/_sass/: vendor-fixes.scss
frontend/_smolhub/: playground-01-smolllama.md  playground-02-smolmixtral.md  playground-03-smoltransformer.md  playground-04-storykimi.md  playground-05-storyllama.md  playground-06-storymixtral.md
frontend/_talks/: paper-replications.md
frontend/markdown_generator/: publications.py
neatrl/: .gitignore  CHANGELOG.md  Makefile  README.md  pyproject.toml
neatrl/docs/: README.md  run_dqn_cartpole.py
src/neatrl/: __init__.py  a2c.py  a2c_cnn.py  a2c_mlp.py  ddpg.py  ddpg_cnn.py  ddpg_mlp.py  dqn.py  dqn_mlp.py  dueling_dqn.py  dueling_dqn_mlp.py  ppo.py  ppo_cnn.py  ppo_mlp.py  reinforce.py  (+11 more)
tests/: test_code_quality.py  test_custom_agent.py  test_imports.py  test_make_env_and_evaluate.py  test_network_forward_pass.py  test_utils.py
(+134 files in other folders)
