[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "neatrl"
version = "1.0.0"
description = "A Python library for reinforcement learning algorithms"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "Yuvraj Singh", email = "yuvraj.mist@gmail.com" }
]

dependencies = [
    "torch",
    "numpy",
    "gymnasium",
    "stable-baselines3",
    "tqdm",
    "wandb",
    "imageio[ffmpeg]",
    "opencv-python",
    "wandb[media]",
    "pygame-ce>=2.1.3",
]

[project.optional-dependencies]
cli = ["rich", "psutil", "nvidia-ml-py"]
mujoco = ["gymnasium[mujoco]"]
atari = ["gymnasium[atari]", "ale-py"]
classic = ["gymnasium[classic-control]"]
box2d = ["swig", "gymnasium[box2d]"]
dev = [
    "ruff",
    "mypy",
    "black",
    "build",
    "twine",
    "rich",
    "psutil",
    "nvidia-ml-py",
]

[project.scripts]
neatrl = "neatrl.cli.main:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["neatrl*"]

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501", # line too long, handled by black
    "B008", # do not perform function calls in argument defaults
    "C901", # too complex
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[dependency-groups]
dev = [
    "mypy>=1.19.0",
    "psutil>=7.1.3",
    "pyright>=1.1.411",
    "pytest>=8.4.2",
    "rich>=14.2.0",
    "ruff>=0.14.9",
]

