[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "duel-dqn"
version = "0.1.0"
description = "Dueling Deep Q-Network implementation for CliffWalking environment"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "Yuvraj Singh", email = "yuvraj.mist@gmail.com"}
]
dependencies = [
    "torch",
    "torchvision",
    "numpy",
    "gymnasium",
    "stable-baselines3",
    "tqdm",
    "imageio",
    "opencv-python",
    "tensorboard",
]

[project.optional-dependencies]
video = ["imageio", "opencv-python"]
logging = ["tensorboard"]

[tool.setuptools]
packages = ["."]

[tool.ruff]
line-length = 88
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "W", "C90", "I", "N", "UP", "YTT", "S", "BLE", "FBT", "B", "A", "COM", "C4", "DTZ", "T10", "DJ", "EM", "EXE", "FA", "ISC", "ICN", "G", "INP", "PIE", "T20", "PYI", "PT", "Q", "RSE", "RET", "SLF", "SLOT", "SIM", "TID", "TCH", "INT", "ARG", "PTH", "ERA", "PD", "PGH", "PL", "TRY", "FLY", "NPY", "AIR", "PERF", "FURB", "LOG", "RUF"]
ignore = ["S101", "S104", "COM812", "ISC001"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"